--- a/courses.qmd
+++ b/courses.qmd
@@ -11,11 +11,16 @@ editor: source
 
 ## AY 25-26
 
--   [Math 201: Elementary Statistics](https://www.inqs.info/m201_f25)
+-   [Math 201: Elementary Statistics](https://www.inqs.info/m201_s26)
+
+-   [Math 202: Biostatistics](https://www.inqs.info/m2012_f25)
 
 -   [Math 352: Probability and Statistics](https://www.inqs.info/m352_f25)
 
--   [Data 300: Introduction to Monte Carlo Methods](https://www.inqs.info/d300_f25)
+-   [Math 408: Machine Learning](https://www.inqs.info/m408_s26)
+
+
+-   [Math 453: Mathematical Statistics](https://www.inqs.info/m453_s26)
 
 
 ## AY 24-25
